--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "migration:run": "npm run typeorm migration:run -- -d ./ormconfig.ts",
     "migration:generate": "npm run typeorm -- -d ./ormconfig.ts migration:generate ./src/database/migrations/migrations/$npm_config_name",
     "migration:create": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
-    "migration:revert": "npm run typeorm -- -d ./src/config/typeorm.ts migration:revert"
+    "migration:revert": "npm run typeorm -- -d ./src/config/typeorm.ts migration:revert",
+    "find-circular-deps": "madge . -c"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -36,6 +37,8 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "helmet": "^7.0.0",
+    "madge": "^6.1.0",
+    "moment": "^2.29.4",
     "nestjs-pino": "^3.3.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
