--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
+    
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "migration:run": "npm run typeorm migration:run -- -d ./ormconfig.ts",
     "migration:generate": "npm run typeorm -- -d ./ormconfig.ts migration:generate ./src/database/migrations/migrations/$npm_config_name",
     "migration:create": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
     "migration:revert": "npm run typeorm -- -d ./src/config/typeorm.ts migration:revert",
+    "migration:do": "npm run migration:generate && npm run migration:run",
     "find-circular-deps": "madge . -c"
   },
   "dependencies": {
@@ -36,10 +38,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.3.0",
     "helmet": "^7.0.0",
     "madge": "^6.1.0",
     "moment": "^2.29.4",
     "nestjs-pino": "^3.3.0",
+    "pactum": "^3.5.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
