--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,6 @@
 port ="3000" 
 dbUrl ="hey the url"
-DATABASE_HOST= finance_tracker
+DATABASE_HOST= localhost
 DATABASE_PORT=5434
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=123
