--- a/.env.test
+++ b/.env.test
@@ -1,10 +1,10 @@
 port ="3000" 
 dbUrl ="hey the url"
-DATABASE_HOST= localhost
-DATABASE_PORT=5434
+DATABASE_HOST= "test-db"
+DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=123
-DATABASE_NAME=finance_tracker
+DATABASE_NAME=finance_tracker1
 secretKey="rdtfyguiofghjk"
 maxLoggingTries=5
 lockedOutPeriod=5
