--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,32 +1,16 @@
 version: '3'
 services:
-  # api:
-  #   build: . 
-  #   restart: always
-  #   depends_on:
-  #     - test-db
-  #   ports:
-  #     - "6000:3000"
-  #   env_file:
-  #     - .env.test
-  #   networks:
-  #     - finance_tracker
-  # dev-db: 
-  #   image: postgres:13
-  #   restart: always
-  #   ports:
-  #     - "5445:5432"
-  #   environment:
-  #     - POSTGRES_USER=root
-  #     - POSTGRES_PASSWORD=123 
-  #     - POSTGRES_DB=root
-  #   networks:
-  #     - finance_tracker
-  #   healthcheck:
-  #     test: ['CMD-SHELL', 'pg_isready']
-  #     interval: 10s
-  #     timeout: 5s
-  #     retries: 5
+  api:
+    build: . 
+    restart: always
+    ports:
+      - "3000:3000"
+    depends_on:
+      - test-db
+    env_file:
+      - .env.test
+    networks:
+      - finance_tracker
   test-db:
     image: postgres:13
     restart: always
@@ -36,7 +20,7 @@ services:
 
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=123 
-      - POSTGRES_DB=finance_tracker
+      - POSTGRES_DB=finance_tracker1
     networks:
       - finance_tracker
 
