--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
         - name: finance-api 
-          image: 186837223139.dkr.ecr.eu-north-1.amazonaws.com/finance-api:latest
+          image: finance-api:latest public.ecr.aws/v7e4g1x6/finance-api:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
